--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,6 +5,13 @@ permalink: /teaching/
 author_profile: true
 ---
 
+<div align="justify">
+
+  <h2> Classical Mechanics I (33)  </h2>
+
+</div>
+
+
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
