--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,8 +7,14 @@ author_profile: true
 
 <div align="justify">
 
-  <h2> Classical Mechanics I (33)  </h2>
-
+  <h2> <u>Classical Mechanics I (33)</u> </h2>
+  
+  Academic years: <i class="fa fa-fw fa-calendar"></i> 2018-2019, 2019-2020, 2020-2021
+  
+  <ul>
+    <li> Core undergraduate course in <a href="https://physics.uoi.gr/en/"> University of Ioannina, Greece </a> </li>
+    <li> Taught jointly with Prof. Panagiota Kanti for three consecutive years </li>
+  </ul>
 </div>
 
 
