--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -9,7 +9,7 @@ author_profile: true
 
   <h2> <u>Classical Mechanics I (33)</u> </h2>
   
-  Academic years: <i class="fa fa-fw fa-calendar"></i> 2018-2019, 2019-2020, 2020-2021
+  Academic years: <i class="fa fa-fw fa-calendar"></i> 2018-2019, <i class="fa fa-fw fa-calendar"></i> 2019-2020, <i class="fa fa-fw fa-calendar"></i> 2020-2021
   
   <ul>
     <li> Core undergraduate course in <a href="https://physics.uoi.gr/en/"> University of Ioannina, Greece </a> </li>
